# praiselul

./: .gitignore  Makefile  README.md  pyproject.toml
docs/superpowers/specs/: 2026-04-13-praiselul-design.md  2026-06-01-persistent-session-design.md
praiselul/: cli.py  config.py  duration.py  errors.py  plotting.py  time.py
praiselul/praise/: praise_session.py
tests/: test_praise_session.py  test_time.py
