[build-system]
requires = ["setuptools >= 68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "praiselul"
version = "0.2.1"
description = "Overtime management for Praise"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { email = "guillaume@pafin.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests~=2.31",
    "plotly~=5.18",
]

[project.urls]
Repository = "https://github.com/LysanderGG/praiselul"

[project.scripts]
praiselul = "praiselul.cli:main"

[project.optional-dependencies]
dev = [
    "pytest~=8.0",
    "ruff~=0.4",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.setuptools.packages.find]
include = ["praiselul", "praiselul.*"]
